Closed Bug 839425 Opened 11 years ago Closed 11 years ago

BaselineCompiler SETNAME is not reporting undeclared vars in strict mode

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Fixes two jit-tests.
Attachment #711747 - Flags: review?(bhackett1024)
Attachment #711747 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/projects/ionmonkey/rev/c274963d92df
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: