Bug 839425 - Fix SETNAME to report undeclared vars. r=bhackett